--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
   body {
     color: #2b2c48;
     font-family: "Jost", sans-serif;
-    background-image: url('/image_background.jpg');
+    background-image: url('image_background.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
